fixed the grammatical mistakes.

--- a/english-content/index.html
+++ b/english-content/index.html
@@ -47,8 +47,8 @@
                 <div class="column-2 bg-primary">
                     <h4>Books Released</h4>
                     <p>
-                        The books he published is 45. Except two short story books and one barathiyar
-                        prose all the other books are related to folklore. Fieldwork done throughout tamilnadu
+                        The books he published are 45. Except two short story books and one barathiyar
+                        prose all the other books are related to folklore. Fieldwork carried out throughout tamilnadu
                         and his books and research is around folk songs, folk arts, folk tales, riddles and rituals
                     </p>
                     <a href="books.html" class="btn btn-outline">
@@ -66,10 +66,10 @@
                     <h4>Work</h4>
                     <p>
                         Worked as senior research fellow in Madras university for 2 years (1980-82) then joined
-                        in Tamil university (20.10.1982) as folklore professor and promoted in various roles
+                        at the Tamil university (20.10.1982) as folklore professor and enacted various roles
                         such as, head of folklore department,
                         director of publications, director of distance education and dean and retired in 30.06.2011
-                        Then UGC selected him as Emeritus professor and he worked as Emeritus professor in
+                        Then UGC selected him as Emeritus professor and he worked as Emeritus professor at the
                         Pondicherry university and Tamil university.
                     </p>
                     <a href="work.html" class="btn btn-outline">
@@ -113,7 +113,7 @@
                 <div class="column-2 bg-secondary">
                     <h4>Family</h4>
                     <p>
-                        Married with Pavalakkodi, he have a son
+                        Married with Pavalakkodi, he has a son
                         named Arunan and a daughter named Ezhilarasi.
                     </p>
                     <a href="#" class="btn btn-outline">
